--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,12 @@
 dependencies:
   pre:
-    - sudo apt-get install software-properties-common; sudo add-apt-repository -y ppa:george-edison55/cmake-3.x
-    - sudo apt-get update; sudo apt-get install cmake g++
+    - sudo apt-get update; sudo apt-get install build-essential g++
+    - wget `--no-check-certificate https://cmake.org/files/v3.4/cmake-3.4.1.tar.gz
+    - tar xf cmake-3.4.1.tar.gz
+    - cd cmake-3.4.1
+    - ./configure
+    - make
+    - sudo make install
 test:
   override:
     - mkdir build; cd build; cmake -G "Unix Makefiles" --build .. ; make
