--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,8 +10,8 @@ configuration: Debug
 
 before_build:
   # Workaround for CMake not wanting sh.exe on PATH for MinGW
-  - set PATH=%PATH:C:\Program Files (x86)\Git\bin;=%
-  - set PATH=%PATH:C:\Program Files\Git\bin;=%
+  - mv C:/Program Files (x86)/Git/bin/sh.exe C:/Program Files (x86)/Git/bin/shxx.exe
+  - mv C:/Program Files/Git/bin/sh.exe C:/Program Files/Git/bin/shxx.exe
   - set PATH=C:\MinGW\bin;%PATH%
   - mkdir build
   - cd build
