--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,7 @@
 dependencies:
   pre:
     - sudo apt-get update; sudo apt-get install build-essential g++
-    - wget --no-check-certificate https://cmake.org/files/v3.4/cmake-3.4.1.tar.gz
+    - cd /tmp; wget --no-check-certificate https://cmake.org/files/v3.4/cmake-3.4.1.tar.gz
     - tar xf cmake-3.4.1.tar.gz
     - cd cmake-3.4.1
     - ./configure
@@ -9,6 +9,7 @@ dependencies:
     - sudo make install
 test:
   override:
+    - cd ~/squirrel-lang-sdk
     - mkdir build; cd build; cmake -G "Unix Makefiles" --build .. ; make
     - cd tests/sqdbg & ./test.sh
     
