--- a/appveyor.yml
+++ b/appveyor.yml
@@ -10,7 +10,9 @@ configuration: Debug
 
 before_build:
   # Workaround for CMake not wanting sh.exe on PATH for MinGW
-  - set PATH=C:\MinGW\bin
+  - set PATH=%PATH:C:\Program Files (x86)\Git\bin;=%
+  - set PATH=%PATH:C:\Program Files\Git\bin;=%
+  - set PATH=C:\MinGW\bin;%PATH%
   - mkdir build
   - cd build
   - cmake -DCMAKE_BUILD_TYPE=%CONFIGURATION% -G "%GENERATOR%" ..
