--- a/circle.yml
+++ b/circle.yml
@@ -5,7 +5,7 @@ dependencies:
     - wget --no-check-certificate https://cmake.org/files/v3.4/cmake-3.4.1.tar.gz > /tmp/cmake-3.4.1.tar.gz
     - tar xf cmake-3.4.1.tar.gz
     - cd cmake-3.4.1
-    - ./configure
+    - ./bootstrap
     - make
     - sudo make install 
 test:
