--- a/circle.yml
+++ b/circle.yml
@@ -2,7 +2,7 @@ dependencies:
   pre:
     - sudo apt-get update; sudo apt-get install build-essential g++
     - cd /tmp;
-    - wget --no-check-certificate https://cmake.org/files/v3.4/cmake-3.4.1.tar.gz > /tmp/cmake-3.4.1.tar.gz
+    - wget --no-check-certificate https://cmake.org/files/v3.4/cmake-3.4.1.tar.gz
     - tar xf cmake-3.4.1.tar.gz
     - cd cmake-3.4.1
     - ./bootstrap
