--- a/circle.yml
+++ b/circle.yml
@@ -3,7 +3,7 @@ dependencies:
     - sudo apt-get update; sudo apt-get install build-essential g++
     - cd /tmp;
     - wget --no-check-certificate https://cmake.org/files/v3.4/cmake-3.4.1.tar.gz
-    - tar xf cmake-3.4.1.tar.gz
+    - tar -xvzf cmake-3.4.1.tar.gz
     - cd cmake-3.4.1
     - ./bootstrap
     - make
