--- a/circle.yml
+++ b/circle.yml
@@ -2,12 +2,9 @@ dependencies:
   pre:
     - sudo apt-get update; sudo apt-get install build-essential g++
     - cd /tmp;
-    - wget --no-check-certificate https://cmake.org/files/v3.4/cmake-3.4.1.tar.gz
-    - tar -xvzf cmake-3.4.1.tar.gz
-    - cd cmake-3.4.1
-    - ./bootstrap
-    - make
-    - sudo make install 
+    - wget --no-check-certificate https://cmake.org/files/v3.4/cmake-3.4.1.tar.gz -O /tmp/cmake-3.4.1.tar.gz
+    - tar -xvzf /tmp/cmake-3.4.1.tar.gz -c /tmp
+    - cd /tmp/cmake-3.4.1 & ./bootstrap & make & sudo make install 
 test:
   override:
     - cd ~/squirre-lang-sdk
