--- a/circle.yml
+++ b/circle.yml
@@ -4,7 +4,7 @@ dependencies:
     - cd /tmp;
     - wget --no-check-certificate https://cmake.org/files/v3.4/cmake-3.4.1.tar.gz -O /tmp/cmake-3.4.1.tar.gz
     - tar -xvzf /tmp/cmake-3.4.1.tar.gz -C /tmp
-    - cd /tmp/cmake-3.4.1 & ./bootstrap & make & sudo make install 
+    - cd /tmp/cmake-3.4.1; ./bootstrap; make; sudo make install 
 test:
   override:
     - cd ~/squirre-lang-sdk
