--- a/circle.yml
+++ b/circle.yml
@@ -7,8 +7,7 @@ dependencies:
     - cd /tmp/cmake-3.4.1; ./bootstrap; make; sudo make install 
 test:
   override:
-    - cd ~/squirre-lang-sdk
     - mkdir build; cd build; cmake -G "Unix Makefiles" --build .. ; make
-    - cd tests/sqdbg & ./test.sh
+    - cd tests/sqdbg; ./test.sh
     
     
